mlflow/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-postgresql
  namespace: mlops-mlflow
  labels:
    app: mlflow-postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-postgresql
  template:
    metadata:
      labels:
        app: mlflow-postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mlflow-postgresql-pvc
