mlflow/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-postgresql-svc
  namespace: mlops-mlflow
  labels:
    app: mlflow-postgresql
spec:
  type: ClusterIP
  selector:
    app: mlflow-postgresql
  ports:
    - port: 5432
      targetPort: 5432
