mlflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-svc
  namespace: mlops-mlflow
  labels:
    app: mlflow
spec:
  type: ClusterIP
  selector:
    app: mlflow
  ports:
  - name: http
    port: 5000
    targetPort: 5000
